[tool.poetry]
name = "narq"
version = "0.1.0"
description = "Job queues in python with asyncio and redis"
authors = ["Samuel Colvin <s@muelcolvin.com>", "Tim Orme <TimothyOrme@gmail.com>"]
homepage = "https://github.com/codicide/narq"
license = "MIT"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Framework :: AsyncIO",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Operating System :: Unix",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: System :: Clustering",
        "Topic :: System :: Distributed Computing",
        "Topic :: System :: Monitoring",
        "Topic :: System :: Systems Administration"
]
include = ["HISTORY.rst", "README.md", "LICENSE"]

[tool.poetry.scripts]
narq = 'narq.cli:cli'

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.7.3"
async-timeout = "^3.0.1"
click = "^7.1.2"
aioredis = "^1.3.1"
dataclasses = { version = "^0.6", python = "3.6"}
typing-extensions = { version = ">=3.7", python = "<3.8" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
msgpack = "^1.0.0"
pytest = "^6.1.2"
pytest-toolbox = "^0.4"
pytest-timeout = "^1.4.2"
pytest-aiohttp = "^0.3.0"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
sphinx = "^3.3.1"
mypy = "^0.790"

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true

# * Setuptools 50.0 is fundamentally broken in numerous ways (including ways
#   that both break and do not break installation of this project) and *MUST*
#   thus be blacklisted. See also:
#   https://github.com/pypa/setuptools/issues/2350
#   https://github.com/pypa/setuptools/issues/2352
#   https://github.com/pypa/setuptools/issues/2353
[build-system]
requires = [
        "poetry>=0.12",
        'setuptools!=50.0'
]
build-backend = "poetry.masonry.api"
